--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "query-string": "^6.14.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-query": "^3.9.8",
     "react-router-dom": "^5.2.0",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "swr": "^0.4.2"
   },
   "babel": {
     "presets": [
